added id for div for preview

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 />
                 <div class="file__button">Выбрать</div>
               </div>
-              <div class="file__preview"></div>
+              <div id="formPreview" class="file__preview"></div>
             </div>
           </div>
           <div class="form__item">
